admission/ValidatingAdmissionPolicy/policies/procmount/ephemeralcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: procmount-ephemeralcontainers
  annotations:
    kubeapt.io/uuid: "eb9b7ab0-8488-46a7-83d6-7ad706ec9901"
spec:
  hostUsers: false
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
---
# Command: kubectl debug -n policy-test procmount-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/procmount/ephemeralcontainers/deny-kubectl-debug-custom.yaml
